# causal-canvas

./: .gitignore  .pre-commit-config.yaml  00_run_from_config.ipynb  README.md  evaluate_experiments.py  infer_bayesian_network.py  infer_do_why.py  iterate_structure_learning.py  pyproject.toml  repeat_experiments.py  tox.ini
causal_canvas/: bayesian_network_estimator.py  custom_notears_mlp.py  evaluation_utils.py  inference_utils.py  nonlinear_notears.py  preprocessor.py  script_config.py  structure_learner.py  utils.py
causal_canvas/custom_distributions/: __init__.py  categorical.py  gamma.py  non_negative_bimodal.py  non_negative_continuous.py  tweedie.py
data/: student-por_test.csv  student-por_train.csv  student_desc.txt  synthetic_churn_data6.parquet
docs/: config.yaml  config_evaluation.yaml  config_inference.yaml  config_inference_wids.yaml  config_wids_simulation.yaml
dummy_example_results/students_portuguese_grades/linear_causal_discovery/20240215_205413/: config.yml
dummy_example_results/students_portuguese_grades/linear_causal_discovery/20240215_205413/causal_discovery/: 01_fully_connected.html  02_largest_subgraph.html  03_threshold_graph.html  04_threshold_DAG.html  05_DAG_subgraph.html  DAG_for_inference.dot  score_edges_full_structure.yml  score_edges_sparser_structure.yml
dummy_example_results/students_portuguese_grades/non_linear_causal_discovery/20240216_230308/: config.yml
dummy_example_results/students_portuguese_grades/non_linear_causal_discovery/evaluation/: config.yml  thresholds.json
tests/: test_config.py
(+46 files in other folders)
